--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div class="cheeks cheek-right"></div>
             <div class="mouth"></div>
         </div>
-        <div></div>
+        <div class="stem stem-top"></div>
+        <div class="stem stem-bottom"></div>
     </div>
 </body>
 </html>
