added stem part 2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="pod pod-top"></div>
-        <div class="pod pod-bottom"></div>
+        <div class="pod"></div>
         <div class="pea pea-left">
             <div class="eyes-close eye-left"></div>
             <div class="eyes-close eye-right"></div>
@@ -24,8 +23,9 @@
             <div class="cheeks cheek-right"></div>
             <div class="mouth"></div>
         </div>
-        <div class="stem stem-top"></div>
-        <div class="stem stem-bottom"></div>
+        <div class="leaf leaf-top"></div>
+        <div class="leaf leaf-bottom"></div>
+        <div class="stem"></div>
     </div>
 </body>
 </html>
